# vidya

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  vidya.service
docs/: cli-guide.md  declension-engine-design.md  natural-language-queries.md  nl-extension.md  nl-roadmap.md  oxigraph-contribution-potentials.md  prd-context.md  prd-vidya-oxigraph.md  prd-vidya.md  rdf-sparql-and-oxigraph.md  scl-reference.md  vidya-5-plan.md  vidya-overview.md  vsa-natural-language-querying.md
examples/: jyotish-spike.ttl  oxigraph-spike.rs
migrations/: 0001_schema.sql  0002_source_slug.sql
ontology/: vidya.ttl
seeds/: aditya.ttl  ayurveda.ttl  jyotish-synonyms.toml  jyotish.json  jyotish.ttl  vyakarana.json
src/: config.rs  db.rs  error.rs  format.rs  lib.rs  main.rs  mcp.rs
src/engine/: declension.rs  mod.rs  phoneme.rs  sandhi.rs
src/tools/: analyze.rs  claim.rs  derive.rs  domain.rs  entity.rs  health.rs  load.rs  mod.rs  query.rs  relation.rs
tests/: integration.rs
vidya-core/: Cargo.toml
vidya-core/src/: error.rs  lib.rs  ontology.rs  query.rs  store.rs
vidya-core/src/resolve/: assemble.rs  intent.rs  matcher.rs  mod.rs  rank.rs  vocab.rs
vidya-core/src/vsa/: binary.rs  hrr.rs  index.rs  mod.rs
vidya-core/tests/: resolve-tests.rs  store-tests.rs  vsa-spike.rs
