[package]
name = "vidya"
version = "0.1.0"
default-run = "vidya"
edition = "2024"
description = "Structured knowledge graph with reasoning — domain knowledge as cited, queryable, derivable structure."
license = "MPL-2.0"
repository = "https://github.com/ninthhousestudios/manas"
publish = false

[lib]
name = "vidya"
path = "src/lib.rs"

[[bin]]
name = "vidya"
path = "src/main.rs"

[[bin]]
name = "vidya-migrate"
path = "src/bin/vidya-migrate.rs"

[[bin]]
name = "vidya-seed"
path = "src/bin/vidya-seed.rs"

[[bin]]
name = "vidya-test-derive"
path = "src/bin/vidya-test-derive.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "io-std", "io-util"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars", "transport-streamable-http-server"] }
schemars = { version = "1", features = ["chrono04"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
tokio-util = { version = "0.7", features = ["rt"] }
sha2 = "0.11.0"
jsonschema = "0.46"

[dev-dependencies]
serial_test = "3"
