[workspace]
members = ["vidya-core"]

[package]
name = "vidya"
version = "0.2.0"
edition = "2024"
description = "Structured knowledge graph with reasoning — domain knowledge as cited, queryable, derivable structure."
license = "AGPL-3.0"
repository = "https://github.com/ninthhousestudios/vidya"
publish = false

[lib]
name = "vidya"
path = "src/lib.rs"

[[bin]]
name = "vidya"
path = "src/main.rs"

[dependencies]
vidya-core = { path = "vidya-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars", "transport-streamable-http-server"] }
schemars = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"

[dev-dependencies]
oxigraph = { version = "0.5", features = ["rocksdb", "rdf-12"] }
